--- a/index.html
+++ b/index.html
@@ -405,8 +405,7 @@ section{padding-top:1rem;padding-bottom:1rem;}
 
                     <div class="themes-item-content">
                         
-                        <a href="/v4/" rel="nofollow"><img class="theme-item-media" src="./web/img/theme-RiMini-New
--300x200.jpg" alt="主题样式-V4"></a>
+                        <a href="/v4/" rel="nofollow"><img class="theme-item-media" src="./web/img/theme-rimini-new-300x200.jpg" alt="主题样式-V4"></a>
 
                         <div class="mt-3 text-center">
                             <a href="/lianxi/" class="btn btn-danger-soft mt-2 me-2">立即购买</a>
